Added test case and data